<resources>
    <string name="app_name">KG Wash</string>
    <string name="washiron">Wash + Iron</string>
    <string name="wiron_desc">25 Rs per piece </string>

    <string name="washfold">Wash + Fold</string>
    <string name="wfold_descrp">18 Rs per piece </string>
    <string name="iron">Iron</string>
    <string name="iron_desc">8 Rs per piece</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="washfoldxml">Wash and Fold</string>
    <string name="washironxml">Wash and Iron</string>
    <string name="ironxml">Iron</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Logout</string>
    <string name="ScheduleNow">Schedule Now</string>
    <string name="TCapply">Terms and Conditions</string>
    <string name="pieces1">
   \n 30pieces\n\n 30days \n\n 3pickups
</string>
    <string name="pieces2">
   \n 60pieces\n\n 30days \n\n 4pickups
</string>
    <string name="pieces3">
   \n 90pieces\n\n 30days \n\n 5pickups
</string>
    <string name="pieces4">
   \n120pieces\n\n 30days \n\n 6pickups
</string>
    <string name="cost1">RS-540</string>
    <string name="cost2"></string>
    <string name="cost3"></string>
    <string name="cost4"></string>
    <string-array name="SelectArea">
        <item>-- Select Area--</item>
        <item> Gachibowli </item>
        <item> Hi-Tech City </item>
        <item> Hafeezpet </item>
        <item> Kondapur </item>
        <item> Madhapur </item>

    </string-array>
    <string-array name="TimeSlots">
        <item>-- Time Slote --</item>
        <item> 6Am to 11Am</item>
        <item> 6Pm to 11Pm</item>

    </string-array>


    <string-array name="spinner_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>


    </string-array>


    <string name="start">How do I get started?</string>
    <string name="start1">Initially you can directly Schedule for pickup.With in 10hours our boys pick-up your order for Laundry.They get all the info about cloths and acknoledge you about it. Click here to get started now!</string>

    <string name="second">When will I get my clothes back?</string>
    <string name="second1">Turnaround time is 36 Hours from pick-up to drop off (except weekends).</string>
    <string name="third"> Are there things that you will not wash?</string>
    <string name="third1">Not Much!!. If our laundry specialist discovers that it would not be sensible to wash a certain textile, we will contact you and agree on how to continue.</string>
    <string name="fourth">What if I can’t be home for my scheduled pick-up or drop off?</string>
    <string name="fourth1">You can leave your bag in secure location outside your home (doorstep, porch, patio, reception desk etc.) or reschedule a day/time with your Provider.</string>

    <string name="fifth1">Along with your laundry bag, your Provider can take your dry clean only items to our preferred dry cleaner and pick them back up. They’ll be delivered right to your door with your wash and fold laundry.</string>
    <string name="six1"> All scheduling is handled by your local Laundry Care Provider.sign-up confirmation phone for your Provider’s contact information.  You can also contact Laundry Care Home Office via  calling 900-037-9005</string>
    <string name="seven1">Absolutely not! Each bag is processed by itself. We will never clean your clothes with another customer’s clothing.</string>
    <string name="eight1">  Avoid these by notifying and rescheduling your pick-up/ drop off directly with your local Laundry Care Provider.</string>
    <string name="nine1">We ask that you ensure all items have been removed from your pockets prior to pick-up. In the event that we do find items in your pockets, we’ll return them inside a sealed bag along with your laundry.</string>
    <string name="ten1">Recurring clients are provided with a reusable nylon Laundry Care bag at a charge of $3.92/bag. This charge will appear on your initial service invoice or at any time you request a new/replacement bag</string>
    <string name="main"> we try to connect the people with Laundry Care Provider through this app.\n\n      The main motive of our app is to provide Laundry Services at your door step at reasonable cost with user friendly enviornment through our app.</string>


    <string name="aboutus">     We believed that CREATIVITY can solve almost any problem. In this belief, we try to connect the customers with and Laundry Care Provider through this app.\n\n       we provide Laundry Services at your door step at reasonable cost with user friendly enviornment through our app.
	</string>
    <string name="aboutmansopresk">     Mansopresk is the fastest growing software developement company.The motto has always been timely service, best quality and optimum cost.\n\n      Always keep in touch with the customers through quality, performance, service and assistance. We value the trust and beliefs vested in us by our clients and professional contacts and provide a dedicated service with an honest and direct approach in all our dealings.\n\n      Our Company always encourage the new thoughts and creativity in developing applications to get the better solutions which meet new requirements, unarticulated needs, or existing market needs.</string>

    <string name="how">
HOW IT WORKS?\n\n
PLACE ORDER\n\n
Go to our laundry app or website and schedule your wash as per your convenience. We will take it from there. Hassel free, fast and simple!\n\n

PICK UP\n\n
Just be ready with your Laundry, we will be right there with our eco-friendly laundry cart. We will grab away all the dirty clothes from your home.\n\n


WASH and IRON\n\n
We take dirt very seriously. Our experts, with the help of our state of art machinery ensure that your clothes come back looking clean, tidier and fresh every time.\n\n

DELIVERY\n\n
Your clothes will be delivered at your doorstep on time and as fresh as daisy. Now getting your laundry done is that convenient. Didn't we tell you laundry is so easy with LaundroKart?\n\n



Why choose us?\n
doorstep service\n

clean and hygenic\n
Expert Fabric Care\n
affordable convenient\n
green concept\n
Money Saving Combo Packages\n
neat wrinkle package\n
Neat and Wrinkle Free Packaging\n
</string>
    <string name="contact"> Address :\n\n Flat No.401, Plot No 545B, 2nd street,\n Sri Ramnagar Block B,\n Kondapur,\n Hyderabad, Telangana 500084.\n\n Phone: +91-9000379005.\n"</string>
    <string name="terms1">* Your items will ONLY be given with a designated person or dropped off in a predetermined place with your prior approval.  Please refer to our Terms of Service for more information.
</string>
    <string name="terms2">*  All garments/linen/fabrics are handled with greatest care but owing to the conditions of the articles or non apparent/non-visible defects in its material there is a POSSIBILITY OF DISCOLOURING OR SHRINKAGE. Such garments are accepted for cleaning at OWNER'S RISK and company will not accept any responsibility for it.
</string>
    <string name="terms3">*  Laundry Care will use reasonable efforts to try to ensure that washing, drying and folding services are maintained at a high level of quality.
</string>
    <string name="terms4">*Laundry Care is not responsible for any article which is left beyond 30 days. After this storage fees will be charged @12% per month on the total invoice amount. Article not claimed within three months shall be handled appropriately by Company and be sold to recover the billed charges.
 </string>
    <string name="terms5">*Laundry Care reserves the right to refuse cleaning any garment.
</string>
    <string name="terms6">* Removal of stain is a part of the process but, complete removal of stains can not be guaranteed and will be processed at customer's risk.*</string>
    <string name="title_activity_mainfg2">Mainfg2Activity</string>
    <string name="terms7">Laundry Care is not responsible for loss of or damage to any personal or non-cleanable items left in the article such as money, jewelry, or anything else.</string>
    <string name="terms8">Customers are requested to count the articles at the time of delivery and inform the delivery man in case of missing articles. Company will not be responsible for any such claims after the articles delivery has been accepted and signed by the customer.</string>

    <string name="terms9">Customer has to pay the entire amount after successful delivery of order.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_kg_maps">Map</string>
    <string name="title_activity_type_of_payment">TypeOfPaymentActivity</string>
</resources>
