<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.mansopresk.mansopresk01.kgwash.Navigation.TermsConditionsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbartc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4b9ac9"
        android:gravity="top"
        android:minHeight="50dp"
        app:theme="@style/ToolbarStyle"
        app:titleMarginTop="@dimen/margin_to_center"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <TextView
            android:id="@+id/toolbartexttc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="KG Wash"
            android:textColor="#fff"
            android:textSize="18sp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms and Conditions"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>

    <TextView
    android:padding="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/terms1"
        android:textColor="#4b9ac9"/>

    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms2"
        android:textColor="#4b9ac9"/>
    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms3"
        android:textColor="#4b9ac9"/>
    <TextView
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms4"
        android:textColor="#4b9ac9"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
