<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#fff">
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbarabt"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:gravity="top"
    android:minHeight="50dp"
    app:titleMarginTop="@dimen/margin_to_center"
    android:background="#4b9ac9">
    <TextView
        android:id="@+id/tooltextabt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="KG Wash"
        android:textSize="18sp"
        android:textColor="#fff"/>
</android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/aboutimage" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="Welcome to Kg Wash App"
                    android:textColor="#4b9ac9"
                    android:textSize="30dp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flamenco_light"
                    android:text="About us :"
                    android:textColor="#4b9ac9"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flamenco_light"
                    android:text="@string/aboutus"
                    android:textColor="#292929"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flamenco_light"
                    android:text="About Company :"
                    android:textColor="#4b9ac9"
                    android:textSize="26dp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flamenco_light"
                    android:text="@string/aboutmansopresk"
                    android:textColor="#292929"
                    android:textSize="18dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dip"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="#3c7fa7"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/flamenco_light"
                            android:padding="5dip"
                            android:text="How It Works "
                            android:textColor="#ffffff"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/panel2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dip"
                                android:background="#fff"
                                android:fontFamily="@font/flamenco_light"
                                android:padding="5dip"
                                android:text="@string/how"
                                android:textColor="#000"
                                android:textSize="18dp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dip"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:background="#3c7fa7"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/flamenco_light"
                            android:padding="5dip"
                            android:text="Contact Us"
                            android:textColor="#ffffff"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/panel3"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dip"
                                android:background="#fff"
                                android:fontFamily="@font/flamenco_light"
                                android:padding="5dip"
                                android:text="@string/contact"
                                android:textColor="#000"
                                android:textSize="18dp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/flamenco_light"
                    android:gravity="end"
                    android:text="Regards"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/flamenco_light"
                    android:gravity="end"
                    android:text="Mansopresk"
                    android:textColor="#0e9bef"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/flamenco_light"
                    android:gravity="end"
                    android:text="+91-9000379005"
                    android:textColor="#000"
                    android:textSize="18dp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/acall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/phonecontact" />

                    <ImageView
                        android:id="@+id/aemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/email" />

                    <ImageView
                        android:id="@+id/awebsite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/www" />

                </LinearLayout>
            </LinearLayout>
</LinearLayout>
       </ScrollView>

</LinearLayout>


